added put for two directional exchange